2005-05-17  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkwindow.c (gdk_window_set_bg_pattern): Adjust offsets
	when recursing.  (#153682, Felipe Heidrich)

2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkscale.c (gtk_scale_class_init): Don't bind GDK_Page_Up 
	and GDK_Page_Down twice.  (#168333, Hazael Maldonado Torres)

	* gtk/gtkentry.c (cursor_blinks): Don't blink the cursor if 
	the entry is not editable.  (#304171, Nikos Kouremenos)
	
	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_constructor): 
	Make sure the action of the button and the dialog are in sync,
	when the dialog is provided by the app.  (#303987, David A Knight)

	* gdk/gdkpango.c (gdk_pango_renderer_get_default): Fix a typo
	in the docs.  (#303940, Masao Mutoh)

	* configure.in (GTK_DOC_CHECK): Check for gtk-doc 1.4.

	* gtk/gtktoggleaction.c (connect_proxy): Be more careful when
	casting.  (#304089, Philip Langdale)

	* gtk/gtkstatusbar.c (gtk_statusbar_size_allocate): Only shrink
	the label if we need to.  (#169390, Felix Riemann)

Sat May 14 00:07:46 2005  Manish Singh  <yosh@gimp.org>

	* gdk/gdkdraw.c
	* gdk/gdkpango.c: #include gdkcairo.h for gdk_cairo_create()
	declaration.

	* gtk/gtkiconview.c (gtk_icon_view_create_drag_icon): actually
	call gdk_cairo_set_source_color() with a color.

	* gtk/gtkimage.c (gtk_image_expose): remove unused stock_id variable.

	* tests/testiconview.c (main): cast args of drag functions to the
	appropriate type.

2005-05-13  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdrawable-x11.c: Update for cairo-xlib API change.

	* gdk/x11/gdkpixmap-x11.[ch] gdk/gdk.symbols: Export 
	gdk_pixmap_impl_x11_get_type(), needed in gdkdrawable-x11.c.
	
2005-05-11  Owen Taylor  <otaylor@redhat.com>

	* tests/testgtk.c (on_alpha_window_expose): Fix to use
	gdk_cairo_create(). (create_alpha_window): Hook up "response"
	to close the window.

2005-05-11  Owen Taylor  <otaylor@redhat.com>
